<resources>
    <string name="bienvenue">Bienvenue</string>
    <string name="app_name">LudiqueSchool</string>
    <string name="inscription">S\'inscrire</string>
    <string name="connexion">Se connecter</string>
    <string name="quitter">Quitter</string>
    <string name="requis">requis</string>
    <string name="valider">valider</string>
    <string name="MDP">Mot de passe</string>
    <string name="login">Login</string>
    <string name="erreurMail">Email est vide</string>
    <string name="erreurMail2">Email est invalide</string>
    <string name="erreurPseudo">Pseudo est vide</string>
    <string name="erreurPseudo2">Pseudo existe déja</string>
    <string name="erreurPseudo3">Pseudo trop court (>2)</string>
    <string name="erreurMdp">Mot de passe est vide</string>
    <string name="erreurMdp2">Mot de passe invalide</string>
    <string name="MDPcourt">Mot de passe trop court</string>
    <string name="partir">Voulez-vous vraiment partir ?</string>
    <string name="partirmaintenant">Oui, partir maintenant</string>
    <string name="non">Non</string>
    <string name="authentificationreussi">Authentification réussi</string>
    <string name="authentifiicationerreur"> erreur Authentification</string>
    <string name="creationuseremailreussi">creationutilisateurEmail:reussi</string>
    <string name="creationuseremailerreur">creationutilisateurEmail:erreur</string>
    <string name="menu">Menu</string>
    <string name="math">Mathématiques</string>
    <string name="histoire">Histoire</string>
    <string name="geographie">Géographie</string>
    <string name="mathexo">Exercices de mathématiques</string>
    <string name="geoexo">Exercices de Géographie</string>
    <string name="histoireexo">Exercices d\'Histoire</string>
    <string name="niveau1">Niveau 1</string>
    <string name="niveau2">Niveau 2</string>
    <string name="niveau3">Niveau 3</string>
    <string name="niveau4">Niveau 4</string>
    <string name="niveauadd">Niveau 1 : Addition</string>
    <string name="niveausubb">Niveau 2 : Soustraction</string>
    <string name="niveaumul">Niveau 3 : Multiplication</string>
    <string name="niveaudiv">Niveau 4 : Division</string>
    <string name="continuer">Lancer</string>
    <string name="qcm">Vous allez répondre à une série de questions sous la forme d\'un questionnaire à choix multiples.\n\nAttention, vous ne pouvez cliquer qu\'une seule fois par question. Réfléchissez bien avant de répondre !\n\nSi vous êtes prêt appuyez sur \"Lancer\", sinon sur \"Quitter\".</string>
    <string name="exercice">Exercice</string>
    <string name="precedent">Précédent</string>
    <string name="suivant">Suivant</string>
    <string name="retourMenu">Retour menu</string>
    <string name="recommencer">Recommencer</string>
    <string name="regle">* Prendre 1 chiffre après la virgule</string>
    <string name="deconnexion">Se déconnecter</string>
    <string name="compris">compris</string>
    <string name="pseudo">Pseudo</string>
    <string name="visiteur">Visiteur</string>
    <string name="statistique">Statistique</string>
    <string name="mathSous">Math soustraction</string>
    <string name="mathAdd">Math addition</string>
    <string name="mathDiv">Math division</string>
    <string name="mathMul">Math multiplication</string>
    <string name="vide">Vide</string>
</resources>