<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PageMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/pseudoMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="17dp"
            android:text="@string/bienvenue"
            android:textSize="35dp"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />

    </LinearLayout>



    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardmath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:strokeColor="@color/orange"
        app:strokeWidth="@dimen/cardview_default_radius"
        android:onClick="mathBTN">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->
            <ImageView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:srcCompat="@drawable/maths"
                />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/math"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textAlignment="center"
                android:layout_gravity="center"
                />

        </LinearLayout>



        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardhistoire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:strokeColor="@color/orange"
        app:strokeWidth="@dimen/cardview_default_radius"
        android:onClick="histoireBTN">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                app:srcCompat="@drawable/histoire"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/histoire"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    />

            </LinearLayout>



        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardgeographie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:strokeWidth="@dimen/cardview_default_radius"
        app:strokeColor="@color/orange"
        android:onClick="geographieBTN"
        >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->
            <ImageView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:srcCompat="@drawable/geographie"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/geographie"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    />

            </LinearLayout>



        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/deconnexion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deconnexion"
            android:onClick="deconnexionBTN"
            android:background="@color/black"
            android:padding="10dp"
            android:textSize="30dp"
            android:textColor="@android:color/black">
        </Button>

    </LinearLayout>



</LinearLayout>