<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PageStatistique"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/pseudoMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="17dp"
            android:text="@string/statistique"
            android:textSize="35dp"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />

    </LinearLayout>

    <com.google.android.material.circularreveal.CircularRevealGridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:id="@+id/grille"
        >


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Matière"
            android:background="@color/orange"
            android:textColor="@color/black"
            android:textSize="13dp"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:layout_column="0"
            android:clickable="false"></Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Moyenne"
            android:layout_gravity="fill_horizontal"
            android:textColor="@color/black"
            android:background="@color/orange"
            android:textSize="13dp"
            android:layout_row="0"
            android:layout_column="1"></Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dernière note"
            android:textColor="@color/black"
            android:background="@color/orange"
            android:layout_gravity="fill_horizontal"
            android:textSize="13dp"
            android:layout_row="0"
            android:layout_column="2"></Button>

        <Button
            android:id="@+id/geoMat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/geographie"
            android:background="@color/white"
            android:layout_gravity="fill_horizontal"
            android:textColor="@color/white"
            android:textSize="13dp"
            android:layout_row="1"
            android:layout_column="0"
            android:clickable="false"></Button>
        <Button
            android:id="@+id/geoMoy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vide"
            android:layout_gravity="fill_horizontal"
            android:textColor="@color/white"
            android:background="@color/orange"
            android:textSize="13dp"
            android:layout_row="1"
            android:layout_column="1"></Button>
        <Button
            android:id="@+id/geoLast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vide"
            android:layout_gravity="fill_horizontal"
            android:textColor="@color/white"
            android:background="@color/orange"
            android:textSize="13dp"
            android:layout_row="1"
            android:layout_column="2"></Button>

        <Button
            android:id="@+id/histMat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/histoire"
            android:background="@color/white"
            android:layout_gravity="fill_horizontal"
            android:textColor="@color/white"
            android:textSize="13dp"
            android:layout_row="2"
            android:layout_column="0"
            android:clickable="false"></Button>
        <Button
            android:id="@+id/histMoy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vide"
            android:layout_gravity="fill_horizontal"
            android:textColor="@color/white"
            android:background="@color/orange"
            android:textSize="13dp"
            android:layout_row="2"
            android:layout_column="1"></Button>
        <Button
            android:id="@+id/histLast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vide"
            android:layout_gravity="fill_horizontal"
            android:textColor="@color/white"
            android:background="@color/orange"
            android:textSize="13dp"
            android:layout_row="2"
            android:layout_column="2"></Button>


        <Button
            android:id="@+id/matAddMat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mathAdd"
            android:background="@color/white"
            android:layout_gravity="fill_horizontal"
            android:textColor="@color/white"
            android:textSize="13dp"
            android:layout_row="3"
            android:layout_column="0"
            android:clickable="false"></Button>
        <Button
            android:id="@+id/matAddMoy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vide"
            android:layout_gravity="fill_horizontal"
            android:textColor="@color/white"
            android:background="@color/orange"
            android:textSize="13dp"
            android:layout_row="3"
            android:layout_column="1"></Button>
        <Button
            android:id="@+id/matAddLast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vide"
            android:layout_gravity="fill_horizontal"
            android:textColor="@color/white"
            android:background="@color/orange"
            android:textSize="13dp"
            android:layout_row="3"
            android:layout_column="2"></Button>

        <Button
            android:id="@+id/matsousMat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mathSous"
            android:background="@color/white"
            android:layout_gravity="fill_horizontal"
            android:textColor="@color/white"
            android:textSize="13dp"
            android:layout_row="4"
            android:layout_column="0"
            android:clickable="false"></Button>
        <Button
            android:id="@+id/matsousMoy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vide"
            android:layout_gravity="fill_horizontal"
            android:textColor="@color/white"
            android:background="@color/orange"
            android:textSize="13dp"
            android:layout_row="4"
            android:layout_column="1"></Button>
        <Button
            android:id="@+id/matsousLast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vide"
            android:layout_gravity="fill_horizontal"
            android:textColor="@color/white"
            android:background="@color/orange"
            android:textSize="13dp"
            android:layout_row="4"
            android:layout_column="2"></Button>

        <Button
            android:id="@+id/matmulMat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mathMul"
            android:background="@color/white"
            android:layout_gravity="fill_horizontal"
            android:textColor="@color/white"
            android:textSize="13dp"
            android:layout_row="5"
            android:layout_column="0"
            android:clickable="false"></Button>
        <Button
            android:id="@+id/matmulMoy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vide"
            android:layout_gravity="fill_horizontal"
            android:textColor="@color/white"
            android:background="@color/orange"
            android:textSize="13dp"
            android:layout_row="5"
            android:layout_column="1"></Button>
        <Button
            android:id="@+id/matmulLast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vide"
            android:layout_gravity="fill_horizontal"
            android:textColor="@color/white"
            android:background="@color/orange"
            android:textSize="13dp"
            android:layout_row="5"
            android:layout_column="2"></Button>

        <Button
            android:id="@+id/matdivMat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mathDiv"
            android:background="@color/white"
            android:layout_gravity="fill_horizontal"
            android:textColor="@color/white"
            android:textSize="13dp"
            android:layout_row="6"
            android:layout_column="0"
            android:clickable="false"></Button>
        <Button
            android:id="@+id/matdivMoy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vide"
            android:layout_gravity="fill_horizontal"
            android:textColor="@color/white"
            android:background="@color/orange"
            android:textSize="13dp"
            android:layout_row="6"
            android:layout_column="1"></Button>
        <Button
            android:id="@+id/matdivLast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vide"
            android:layout_gravity="fill_horizontal"
            android:textColor="@color/white"
            android:background="@color/orange"
            android:textSize="13dp"
            android:layout_row="6"
            android:layout_column="2"></Button>





    </com.google.android.material.circularreveal.CircularRevealGridLayout>





</RelativeLayout>